<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:showIn="@layout/activity_home">

    <!-- Logo (circular) -->
    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/content_app_logo"
        android:src="@drawable/logo_circle"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center_horizontal" />

    <!-- App title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_app"
        android:textSize="28sp"
        android:textColor="@color/primaryText"
        />

    <!-- App title -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/text_app_message"
        android:textSize="18sp"
        android:textColor="@color/primaryText"
        />

</LinearLayout>
