<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="ca.kendallroth.mileageapp.RegisterFragment">

    <!-- Name input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/account_editText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/account_errorText">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="text"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!-- Email input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/account_editText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/account_errorText">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/account_editText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/account_errorText"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/account_secondaryText">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password confirm input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/account_editText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/account_errorText"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/account_secondaryText">

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_confirm"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!-- Create Account button -->
    <Button
        android:id="@+id/create_account_button"
        style="?android:textAppearanceSmall"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:background="@color/primaryDark"
        android:text="@string/button_create_account"
        android:textColor="@color/account_primaryText"
        android:textStyle="bold"/>

    <!-- Login button -->
    <Button
        android:id="@+id/login_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/prompt_login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/account_secondaryText"
        />
</LinearLayout>
