<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout
        android:id="@+id/form_layout"
        android:background="@color/primary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin"
        tools:context="ca.kendallroth.mileageapp.activities.RequestPasswordReset">

        <!-- Logo (circular) -->
        <ImageView
            android:id="@+id/logo"
            android:contentDescription="@string/content_app_logo"
            android:src="@drawable/logo_circle"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal" />

        <!-- Activity label -->
        <TextView
            android:id="@+id/activity_label"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginBottom="24dp"
            android:text="@string/title_activity_request_password_reset"
            android:textAlignment="center"
            android:textColor="@color/account_primaryText"
            android:textSize="24sp"/>

        <!-- Email input -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/account_editText"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/account_errorText">

            <EditText
                android:id="@+id/email_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <!-- Request Reset button -->
        <Button
            android:id="@+id/request_reset_button"
            style="?android:textAppearanceSmall"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:background="@color/primaryDark"
            android:text="@string/button_request_password_reset"
            android:textColor="@color/account_primaryText"
            android:textStyle="bold"/>

        <!-- Cancel button -->
        <Button
            android:id="@+id/cancel_request_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/prompt_cancel"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/account_secondaryText"
            />

    </LinearLayout>
</ScrollView>
