<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:background="@color/primary"
android:id="@+id/scroll_view"
android:fillViewport="true"
android:layout_height="match_parent"
android:layout_width="match_parent">

<LinearLayout
    android:id="@+id/form_layout"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    style="@style/max_width_account_pages"
    tools:context="ca.kendallroth.mileageapp.activities.ResetPasswordActivity">

    <!-- Logo (circular) -->
    <ImageView
        android:id="@+id/logo"
        android:contentDescription="@string/content_app_logo"
        android:src="@drawable/logo_circle"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal" />

    <!-- Activity label -->
    <TextView
        android:id="@+id/activity_label"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="24dp"
        android:text="@string/title_activity_reset_password"
        android:textAlignment="center"
        android:textColor="@color/account_primaryText"
        android:textSize="24sp"/>

    <!-- Email display -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/account_editText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/account_errorText"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/account_secondaryText">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/account_editText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/account_errorText"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/account_secondaryText">

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!-- Password confirm input -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/account_editText"
        app:errorEnabled="true"
        app:errorTextAppearance="@style/account_errorText"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/account_secondaryText">

        <EditText
            android:id="@+id/password_confirm_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password_confirm"
            android:inputType="textPassword"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <!-- Request Reset button -->
    <Button
        android:id="@+id/reset_password_button"
        style="?android:textAppearanceSmall"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:background="@color/primaryDark"
        android:text="@string/button_reset_password"
        android:textColor="@color/account_primaryText"
        android:textStyle="bold"/>

</LinearLayout>
</ScrollView>
