<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/primary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.kendallroth.mileageapp.LoginActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/login_form_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Logo image -->
            <ImageView
                android:src="@drawable/logo_circle"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/account_editText"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/account_errorText">

                <!-- Email input -->
                <AutoCompleteTextView
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/account_editText"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/account_errorText"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/account_secondaryText">

                <!-- Password input -->
                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/button_login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <!-- Login button -->
            <Button
                android:id="@+id/login_button"
                style="?android:textAppearanceSmall"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:background="@color/primaryDark"
                android:text="@string/button_login"
                android:textColor="@color/account_primaryText"
                android:textStyle="bold"/>

            <!-- Create account button -->
            <Button
                android:id="@+id/create_account_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/prompt_create_account"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/account_secondaryText"
                />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
